--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Vendee AI - Arrive bientôt</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+</head>
 
 <body>
-
-    <h1>Heading</h1>
-    <p>Paragraph.</p>
-
-</body>
+    <!-- Background Video -->
+    <video class="bg-video" playsinline autoplay muted loop>
+        <source src="assets/mp4/006.mp4" type="video/mp4">
+    </video>
+    <!-- Masthead -->
+    <div class="masthead">
+        <div class="masthead-content text-white">
+            <div class="container-fluid px-4 px-lg-0">
+                <div class="d-flex justify-content-center">
+                    <img src="assets/img/logo_001_xl.png" alt="Description de l'image" class="img-fluid" width="200" height="200">
+                </div>  
+                <br>
+                <hr>
+                <br>        
+                <h1 class="fst-italic lh-1 mb-4">Notre site arrive bientôt !</h1>
+                <p class="mb-5">Nous mettons tout en œuvre pour vous dévoiler le projet qui se cache derrière cette page
+                    !</p>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+    </head>
 
 </html>
